--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.88.0",
     "date-fns": "^4.1.0",
     "next": "16.0.10",
     "react": "19.2.1",
